@@ -163,6 +163,9 @@ call_user_func(function () {
         include_once KREXX_DIR . 'src/View/Messages.php';
         include_once KREXX_DIR . 'src/View/Render.php';
 
+        include_once KREXX_DIR . 'src/View/Skins/RenderHans.php';
+        include_once KREXX_DIR . 'src/View/Skins/RenderSmokyGrey.php';
+
         include_once KREXX_DIR . 'src/Krexx.php';
     };
 
